--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "themes/beautifulhugo"]
 	path = themes/beautifulhugo
 	url = https://github.com/halogenica/beautifulhugo.git
+[submodule "themes/themes/blowfish"]
+	path = themes/themes/blowfish
+	url = https://github.com/nunocoracao/blowfish.git
+	branch = main
