--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,6 @@
 	url = https://github.com/mtgrunt/mtgrunt.github.io.git
 [submodule "themes/themes/blowfish"]
 	path = themes/themes/blowfish
-	url = https://github.com/nunocoracao/blowfish.git
+	url = https://github.com/nunocoracao/blowfish
 	branch = main
 
