--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,10 @@
 baseURL = 'https://mtgrunt.github.io'
 languageCode = 'en-us'
 title = 'Miles Wallace'
-# theme = 'beautifulhugo'
+# theme = 'blowfish'
 
 [[module.imports]]
   path = "github.com/halogenica/beautifulhugo"
+[[module.imports]]
+  path = "github.com/nunocoracao/blowfish"
+
