--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://mtgrunt.github.io'
 languageCode = 'en-us'
 title = 'Miles Wallace'
-# theme = 'blowfish'
+theme = 'blowfish'
 
 [[module.imports]]
   path = "github.com/halogenica/beautifulhugo"
