--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -11,7 +11,7 @@ title = "Blowfish"
   # logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
   # description = "My awesome website"
-  # copyright = "Copy, _right?_ :thinking_face:"
+  copyright = "&copy; | Miles Wallace 2024 | All Rights Reserved |"
 
 # [author]
 #   name = "Your name here"
