--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -16,7 +16,7 @@ title = "Blowfish"
 # [author]
 #   name = "Your name here"
 #   image = "img/blowfish_logo.png"
-#   headline = "I'm only human"
+   headline = "Test"
 #   bio = "A little bit about you"
 #   links = [
 #     { email = "mailto:hello@your_domain.com" },
