--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -13,13 +13,13 @@ title = "Blowfish"
   # description = "My awesome website"
   copyright = "&copy; | Miles Wallace 2024 | All Rights Reserved |"
 
-# [author]
-#   name = "Your name here"
+[author]
+   name = "Miles Wallace"
 #   image = "img/blowfish_logo.png"
-   headline = "Test"
+#   headline = ""
 #   bio = "A little bit about you"
-#   links = [
-#     { email = "mailto:hello@your_domain.com" },
+   links = [
+     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
 #     { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
 #     { apple = "https://www.apple.com" },
@@ -32,7 +32,7 @@ title = "Blowfish"
 #     { facebook = "https://facebook.com/username" },
 #     { flickr = "https://www.flickr.com/photos/username/" },
 #     { foursquare = "https://foursquare.com/username" },
-#     { github = "https://github.com/username" },
+     { github = "https://github.com/mtgrunt" },
 #     { gitlab = "https://gitlab.com/username" },
 #     { google = "https://www.google.com/" },
 #     { hashnode = "https://username.hashnode.dev" },
