--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -18,8 +18,8 @@ title = "Blowfish"
 #   image = "img/blowfish_logo.png"
 #   headline = ""
 #   bio = "A little bit about you"
-   links = [
-     { email = "mailto:hello@your_domain.com" },
+#   links = [
+#     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
 #     { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
 #     { apple = "https://www.apple.com" },
@@ -32,7 +32,7 @@ title = "Blowfish"
 #     { facebook = "https://facebook.com/username" },
 #     { flickr = "https://www.flickr.com/photos/username/" },
 #     { foursquare = "https://foursquare.com/username" },
-     { github = "https://github.com/mtgrunt" },
+#     { github = "https://github.com/mtgrunt" },
 #     { gitlab = "https://gitlab.com/username" },
 #     { google = "https://www.google.com/" },
 #     { hashnode = "https://username.hashnode.dev" },
