--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -15,9 +15,9 @@
   pageRef = "posts"
   weight = 10
 
-#[[main]]
-#  name = "Parent"
-#  weight = 20
+[[main]]
+  name = "NFL"
+  weight = 20
 
 #[[main]]
 #  name = "example sub-menu 1"
