--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -8,7 +8,7 @@ title = "Miles Wallace"
   isoCode = "en"
   rtl = false
   dateFormat = "2 January 2006"
-  # logo = "img/logo.png"
+  logo = "mw.png"
   # secondaryLogo = "img/secondary-logo.png"
   # description = "My awesome website"
   copyright = "&copy; | Miles Wallace 2024 | All Rights Reserved |"
