--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,7 +15,7 @@ title = "Miles Wallace"
 
 [author]
    name = "Miles Wallace"
-#   image = "img/blowfish_logo.png"
+   image = "mw.png"
 #   headline = ""
 #   bio = "A little bit about you"
 #   links = [
