--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,7 +15,7 @@ title = "Miles Wallace"
 
 [author]
    name = "Miles Wallace"
-   image = "mw.png"
+   image = "miles.png"
 #   headline = ""
 #   bio = "A little bit about you"
 #   links = [
