thumb and background img

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -26,10 +26,9 @@
   weight = 30
 
 #[[main]]
-#  name = "example sub-menu 2"
-#  parent = "Parent"
-#  pageRef = "posts"
-#  weight = 20
+#  name = "Pages"
+#  pageRef = "pages"
+#  weight = 40
 
 #[[subnavigation]]
 #  name = "An interesting topic"
