--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -54,7 +54,7 @@ defaultFeaturedImage = "mw.png" # used as default for featured images in all art
   showDateUpdated = false
   showAuthor = true
   # showAuthorBottom = false
-  showHero = false
+  showHero = true
   # heroStyle = "basic" # valid options: basic, big, background, thumbAndBackground
   layoutBackgroundBlur = true # only used when heroStyle equals background or thumbAndBackground
   layoutBackgroundHeaderSpace = true # only used when heroStyle equals background
