--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -78,7 +78,7 @@ defaultFeaturedImage = "mw.png" # used as default for featured images in all art
   showZenMode = false
 
 [list]
-  showHero = false
+  showHero = true
   # heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
   layoutBackgroundBlur = true # only used when heroStyle equals background or thumbAndBackground
   layoutBackgroundHeaderSpace = true # only used when heroStyle equals background
