--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -25,10 +25,10 @@
   pageRef = "about"
   weight = 30
 
-#[[main]]
-#  name = "Pages"
-#  pageRef = "pages"
-#  weight = 40
+[[main]]
+  name = "Tech"
+  pageRef = "tech"
+  weight = 40
 
 #[[subnavigation]]
 #  name = "An interesting topic"
