--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -10,7 +10,7 @@ title = "Miles Wallace"
   dateFormat = "2 January 2006"
   logo = "mw.png"
   # secondaryLogo = "img/secondary-logo.png"
-  # description = "My awesome website"
+  description = "Always be coding and creating!"
   copyright = "&copy; | Miles Wallace 2024 | All Rights Reserved |"
 
 [author]
