--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -32,7 +32,7 @@ title = "Miles Wallace"
 #     { facebook = "https://facebook.com/username" },
 #     { flickr = "https://www.flickr.com/photos/username/" },
 #     { foursquare = "https://foursquare.com/username" },
-     { github = "https://github.com/mtgrunt" },
+#     { github = "https://github.com/mtgrunt" },
 #     { gitlab = "https://gitlab.com/username" },
 #     { google = "https://www.google.com/" },
 #     { hashnode = "https://username.hashnode.dev" },
